--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -21,8 +21,8 @@ removePathAccents: true
 
 module:
   imports:
-    - path: github.com/wowchemy/wowchemy-hugo-modules/wowchemy-cms/v5
     - path: github.com/wowchemy/wowchemy-hugo-modules/wowchemy/v5
+#    - path: github.com/wowchemy/wowchemy-hugo-modules/wowchemy-cms/v5
 
 ############################
 ## ADVANCED
