starters: migrate Link-In-Bio to Tailwind 4

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -30,7 +30,7 @@ marketing:
 header:
   navbar:
     enable: true
-    blox: floating-theme-toggler
+    block: floating-theme-toggler
 
 # Site footer
 footer:
