--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -3,7 +3,8 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Fast & Free Link In Bio Website (Hugo Theme) # Website name
+# Website name (set in params.yaml under hugoblox.branding.name)
+title: ''
 baseURL: 'https://example.com/' # Website URL
 
 ############################
@@ -28,7 +29,7 @@ pagination:
 enableEmoji: true
 enableRobotsTXT: true
 footnotereturnlinkcontents: <sup>^</sup>
-ignoreFiles: [\.ipynb$, .ipynb_checkpoints$, \.Rmd$, \.Rmarkdown$, _cache$]
+ignoreFiles: [".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "_cache$"]
 disableAliases: true
 outputs:
   home: [HTML, RSS, headers, redirects]
